<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.SignUpFragment">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_4"
            android:text="@string/authenticating"
            android:textColor="@color/color_dark"
            android:textSize="@dimen/dimen_text_16"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:hint="@string/enter_your_first_name" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_32"
                android:hint="@string/enter_your_last_name" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_32"
                android:hint="@string/enter_your_email" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_32"
                android:hint="@string/enter_your_password" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_32"
                android:hint="@string/confirm_your_password" />

            <EditText
                android:id="@+id/mob_no"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_32"
                android:hint="@string/enter_your_mobile_number" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_32"
                android:hint="@string/enter_your_address" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:text="@string/sign_up"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_12"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/existing_user_t"
                    android:textSize="@dimen/dimen_text_16" />

                <TextView
                    android:id="@+id/log_in_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="@color/color_dark"
                    android:textSize="@dimen/dimen_text_16"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>