<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_16">

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="@dimen/dimen_84"
        android:layout_height="@dimen/dimen_84"
        android:contentDescription="@string/profile" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/dimen_12"
        android:layout_marginEnd="@dimen/dimen_12"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="@color/color_dark"
                    android:textSize="@dimen/dimen_text_12" />

                <TextView
                    android:id="@+id/first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aditya"
                    android:textColor="@color/color_dark"
                    android:textSize="@dimen/dimen_text_16"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="@color/color_dark"
                    android:textSize="@dimen/dimen_text_12" />

                <TextView
                    android:id="@+id/last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pandey"
                    android:textColor="@color/color_dark"
                    android:textSize="@dimen/dimen_text_16"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="@color/color_dark"
            android:textSize="@dimen/dimen_text_12" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icgadi99_gmail_com"
            android:textColor="@color/color_dark"
            android:textSize="@dimen/dimen_text_16"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>