<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.ProfileFragment">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_4"
            android:text="@string/fetching_data"
            android:textColor="@color/color_dark"
            android:textSize="@dimen/dimen_text_16" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_32"
                        android:layout_marginTop="@dimen/dimen_32"
                        android:layout_marginEnd="@dimen/dimen_32"
                        android:text="@string/first_name"
                        android:textColor="@color/color_dark"
                        android:textSize="@dimen/dimen_text_16" />

                    <TextView
                        android:id="@+id/first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_32"
                        android:layout_marginEnd="@dimen/dimen_32"
                        android:text="@string/aditya"
                        android:textColor="@color/color_dark"
                        android:textSize="@dimen/dimen_text_24"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_32"
                        android:text="@string/last_name"
                        android:textColor="@color/color_dark"
                        android:textSize="@dimen/dimen_text_16" />

                    <TextView
                        android:id="@+id/last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pandey"
                        android:textColor="@color/color_dark"
                        android:textSize="@dimen/dimen_text_24"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_32"
                android:text="@string/e_mail"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/dimen_text_16" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:text="@string/icgadi99_gmail_com"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/dimen_text_24"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_32"
                android:text="@string/mobile_number"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/dimen_text_16" />

            <TextView
                android:id="@+id/mob_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:text="@string/_917837739217"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/dimen_text_24"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_32"
                android:text="@string/address"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/dimen_text_16" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:text="@string/_16_f_sarabha_nagar_ludhiana"
                android:textColor="@color/color_dark"
                android:textSize="@dimen/dimen_text_24"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</layout>